Fixed unit tests
 - The classes have been renamed and taken out of jquery scope. They
   needed to be added back to allow for unit testing. Kept the main
   structure as is to indicate their "proper" scope, and made them
   available at the bottom of the script

--- a/tests/jsTestDriver.conf
+++ b/tests/jsTestDriver.conf
@@ -4,6 +4,7 @@ load:
   - jquery-1.9.1.min.js
   - qunit-lib/equiv.js
   - qunit-lib/QUnitAdapter.js
+  - ../lib/datejs/build/date-en-NZ.js
   - ../js/jquery.eventCalendar.js
 
 test:
